fix: 타입 오류 수정 - readonly 배열 타입 처리
- lib/i18n/useTranslation.ts에서 readonly string[] 타입 지원 추가
- ts, ta 함수에 타입 가드 개선
- Vercel 빌드 오류 해결

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "setup": "node scripts/setup-env.js",
+    "generate:today": "node scripts/generate-today-insight.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
