fix: Vercel 배포 오류 해결
- @vercel/postgres 동적 import를 ESM 방식으로 변경
- 모든 getSql() 호출을 await getSql()로 수정
- DB 연결 실패 시 Mock 데이터로 안전하게 폴백
- API 라우트 에러 처리 개선 및 로깅 강화
- next.config.ts 빌드 설정 명시
- vercel.json 빌드 명령어 추가

--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,8 @@
       "schedule": "0 21 * * *"
     }
   ],
-  "regions": ["icn1"]
+  "regions": ["icn1"],
+  "buildCommand": "npm run build",
+  "devCommand": "npm run dev",
+  "installCommand": "npm install"
 }
