--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "ai-insight-calendar",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
