--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,5 @@
       "schedule": "0 21 * * *"
     }
   ],
-  "regions": ["icn1"],
-  "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install"
+  "regions": ["icn1"]
 }
